--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "goit-react-hw-05-movies",
   "version": "0.1.0",
+   "homepage": "https://samchyk.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
